// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackupPhraseContainer renders correctly for input backup phrase 1`] = `
<View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <Text
        style={
          {
            "fontFamily": "Inter-Bold",
            "fontSize": 20,
            "lineHeight": 28,
            "marginBottom": 16,
          }
        }
      >
        writeDownKeyExperimental
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 10,
      }
    }
  >
    <TextInput
      autoCapitalize="none"
      autoCorrect={false}
      enablesReturnKeyAutomatically={true}
      multiline={true}
      onChangeText={[Function]}
      placeholder="backupPhrasePlaceholder"
      placeholderTextColor="#666666"
      shouldShowClipboard={[Function]}
      style={
        [
          {
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "minHeight": 125,
            "padding": 14,
            "paddingTop": 16,
            "textAlignVertical": "top",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value="prosper winner find donate tape history measure umbrella agent patrol want rhythm old unable wash wrong need fluid hammer coach reveal plastic trust lake"
    />
  </View>
</View>
`;

exports[`BackupPhraseContainer renders correctly for readonly backup 12-word phrase 1`] = `
<View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <Text
        style={
          {
            "fontFamily": "Inter-Bold",
            "fontSize": 20,
            "lineHeight": 28,
            "marginBottom": 16,
          }
        }
      >
        writeDownKeyExperimental
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="prosper winner find donate tape history measure umbrella agent patrol want rhythm"
    style={
      {
        "alignContent": "center",
        "backgroundColor": "#F8F9F9",
        "borderColor": "#E6E6E6",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
        "marginTop": 8,
        "padding": 8,
      }
    }
    testID="AccountKeyWordsContainer"
  >
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginHorizontal": 12,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#505050",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          1
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          prosper
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#505050",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          2
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          winner
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#505050",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          3
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          find
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#505050",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          4
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          donate
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#505050",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          5
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          tape
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#505050",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          6
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          history
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#505050",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          7
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          measure
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#505050",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          8
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          umbrella
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#505050",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          9
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          agent
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#505050",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          10
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          patrol
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#505050",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          11
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          want
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#505050",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          12
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          rhythm
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`BackupPhraseContainer renders correctly for readonly backup 24-word phrase 1`] = `
<View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <Text
        style={
          {
            "fontFamily": "Inter-Bold",
            "fontSize": 20,
            "lineHeight": 28,
            "marginBottom": 16,
          }
        }
      >
        writeDownKeyExperimental
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="prosper winner find donate tape history measure umbrella agent patrol want rhythm old unable wash wrong need fluid hammer coach reveal plastic trust lake"
    style={
      {
        "alignContent": "center",
        "backgroundColor": "#F8F9F9",
        "borderColor": "#E6E6E6",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
        "marginTop": 8,
        "padding": 8,
      }
    }
    testID="AccountKeyWordsContainer"
  >
    <Text
      style={
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 22,
          "lineHeight": 32,
        }
      }
    >
      prosper winner find donate tape history measure umbrella agent patrol want rhythm old unable wash wrong need fluid hammer coach reveal plastic trust lake
    </Text>
  </View>
</View>
`;
